Project MarketBot {
  database_type: "PostgreSQL 17"
  Note: "Private market_bot schema. UUIDv7 values are generated by Python."
}

Table market_bot.runs {
  id uuid [pk]
  status text [not null]
  started_at timestamptz [not null]
  completed_at timestamptz
  metadata jsonb [not null, default: `'{}'::jsonb`]
  created_at timestamptz [not null, default: `now()`]
}

Table market_bot.rule_versions {
  id uuid [pk]
  rule_id text [not null]
  version text [not null]
  family text [not null]
  engine_id text [not null]
  implementation_hash text [not null]
  manifest jsonb [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (engine_id, rule_id, version) [unique, name: "rule_versions_identity_key"]
  }
}

Table market_bot.strategy_versions {
  id uuid [pk]
  strategy_id text [not null]
  version text [not null]
  family text [not null]
  engine_id text [not null]
  compiled_hash text [not null]
  definition jsonb [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (engine_id, strategy_id, version) [unique, name: "strategy_versions_identity_key"]
  }
}

Table market_bot.run_strategies {
  id uuid [pk]
  run_id uuid [not null]
  strategy_version_id uuid [not null]
  engine_id text [not null]
  strategy_family text [not null]
  mode text [not null, note: "PRIMARY | CANDIDATE | RESEARCH | DISABLED"]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (run_id, strategy_version_id) [unique, name: "run_strategies_assignment_key"]
    (run_id, engine_id, strategy_family) [unique, name: "run_strategies_one_primary_per_scope_idx", note: "Partial: mode = 'PRIMARY'"]
    strategy_version_id [name: "run_strategies_strategy_version_id_idx"]
  }
}

Table market_bot.processed_events {
  id uuid [pk]
  consumer_name text [not null]
  event_id uuid [not null]
  run_id uuid
  subject text [not null]
  payload_hash text [not null]
  processed_at timestamptz [not null, default: `now()`]

  indexes {
    (consumer_name, event_id) [unique, name: "processed_events_delivery_key"]
    run_id [name: "processed_events_run_id_idx"]
  }
}

Table market_bot.outbox_events {
  id uuid [pk]
  aggregate_type text [not null]
  aggregate_id text [not null]
  event_type text [not null]
  subject text [not null]
  payload jsonb [not null]
  headers jsonb [not null, default: `'{}'::jsonb`]
  occurred_at timestamptz [not null]
  available_at timestamptz [not null]
  published_at timestamptz
  attempts integer [not null, default: 0]
  last_error text
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (available_at, created_at) [name: "outbox_events_pending_idx", note: "Partial: published_at is null"]
  }
}

Table market_bot.consumer_checkpoints {
  id uuid [pk]
  consumer_name text [not null]
  stream text [not null]
  sequence bigint [not null]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (consumer_name, stream) [unique, name: "consumer_checkpoints_position_key"]
  }
}

Table market_bot.engine_decision_states {
  id uuid [pk]
  engine_name text [not null]
  implementation_version text [not null]
  state_schema_version text [not null]
  payload jsonb [not null]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (engine_name, implementation_version) [unique, name: "engine_decision_states_engine_implementation_key"]
  }
}

Table market_bot.alert_analysis_states {
  id uuid [pk]
  engine_name text [not null]
  implementation_version text [not null]
  symbol text [not null]
  horizon text [not null, note: "LONG_TERM | DILUTION | SWING | INTRADAY | VOLUME_STRUCTURE | OPTIONS_GAMMA | NEWS"]
  analysis_id uuid [not null]
  payload jsonb [not null]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (engine_name, implementation_version, symbol, horizon) [unique, name: "alert_analysis_states_identity_key"]
  }
}

Table market_bot.alert_continuation_candidates {
  id uuid [pk]
  engine_name text [not null]
  implementation_version text [not null]
  symbol text [not null]
  active boolean [not null]
  payload jsonb [not null]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (engine_name, implementation_version, symbol) [unique, name: "alert_continuation_candidates_identity_key"]
  }
}

Table market_bot.alert_continuation_sessions {
  id uuid [pk]
  engine_name text [not null]
  implementation_version text [not null]
  symbol text [not null]
  market_session date [not null]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (engine_name, implementation_version, symbol) [unique, name: "alert_continuation_sessions_identity_key"]
  }
}

Table market_bot.service_health {
  id uuid [pk]
  service_name text [not null, unique]
  status text [not null]
  details jsonb [not null, default: `'{}'::jsonb`]
  observed_at timestamptz [not null]
  updated_at timestamptz [not null, default: `now()`]
}

Table market_bot.control_events {
  id uuid [pk]
  event_type text [not null]
  run_id uuid
  payload jsonb [not null, default: `'{}'::jsonb`]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (run_id, created_at) [name: "control_events_run_id_created_at_idx"]
  }
}

Table market_bot.entry_watches {
  id uuid [pk]
  symbol text [not null]
  status text [not null, note: "ARMED | IN_ZONE | EARLY_ENTRY | IMPULSE_EXTENDED | TRIGGERED | POLICY_INELIGIBLE | INVALIDATED | EXPIRED"]
  thesis_version text [not null]
  armed_at timestamptz [not null]
  updated_at timestamptz [not null]
  expires_at timestamptz [not null]
  terminal_at timestamptz
  zone_low numeric(28,8) [not null]
  zone_high numeric(28,8) [not null]
  invalidation numeric(28,8) [not null]
  original_price numeric(28,8) [not null]
  current_price numeric(28,8) [not null]
  correction_target_percent numeric(12,4) [not null]
  source_analysis_id uuid [not null]
  source_context_hash text [not null]
  anchor_snapshot jsonb [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    symbol [unique, name: "entry_watches_one_active_per_symbol_idx", note: "Partial: status in ('ARMED', 'IN_ZONE', 'EARLY_ENTRY', 'IMPULSE_EXTENDED')"]
    (status, expires_at) [name: "entry_watches_status_expires_at_idx"]
  }
}

Table market_bot.entry_watch_transitions {
  id uuid [pk]
  watch_id uuid [not null]
  previous_status text
  status text [not null]
  occurred_at timestamptz [not null]
  current_price numeric(28,8) [not null]
  reasons jsonb [not null]
  horizons jsonb [not null]
  source_analysis_ids jsonb [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (watch_id, occurred_at) [name: "entry_watch_transitions_watch_occurred_idx"]
  }
}

Table market_bot.entry_opportunities {
  id uuid [pk]
  symbol text [not null]
  status text [not null, note: "ARMED | IN_ZONE | CONFIRMING | OPEN | CLOSED"]
  current_maturity text [not null, note: "ARMED | IN_ZONE | L1 | L2 | L3 | L4"]
  peak_maturity text [not null, note: "ARMED | IN_ZONE | L1 | L2 | L3 | L4"]
  progress_percent numeric(5,2) [not null]
  original_watch_id uuid
  armed_at timestamptz [not null]
  updated_at timestamptz [not null]
  expires_at timestamptz [not null]
  closed_at timestamptz
  close_reason text [note: "POLICY_INELIGIBLE | ORIGINAL_THESIS_INVALIDATED | EXPIRED | UNIVERSE_REMOVED | ALL_HORIZONS_CLOSED"]
  zone_low numeric(28,8) [not null]
  zone_high numeric(28,8) [not null]
  invalidation numeric(28,8) [not null]
  original_price numeric(28,8) [not null]
  current_price numeric(28,8) [not null]
  revision integer [not null]
  payload jsonb [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    symbol [unique, name: "entry_opportunities_one_active_per_symbol_idx", note: "Partial: status <> 'CLOSED'"]
    (status, expires_at) [name: "entry_opportunities_status_expires_idx"]
  }
}

Table market_bot.entry_opportunity_events {
  id uuid [pk]
  opportunity_id uuid [not null]
  symbol text [not null]
  occurred_at timestamptz [not null]
  reasons jsonb [not null]
  payload jsonb [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (opportunity_id, occurred_at) [name: "entry_opportunity_events_opportunity_occurred_idx"]
    (symbol, occurred_at) [name: "entry_opportunity_events_symbol_occurred_idx"]
    (opportunity_id, occurred_at, id) [name: "entry_opportunity_events_legacy_evidence_retention_idx", note: "Partial: exact legacy single-reason evidence_updated events only"]
  }
}

Table market_bot.long_portfolio_alerts {
  id uuid [pk]
  deduplication_key text [not null, unique]
  symbol text [not null]
  created_at timestamptz [not null]
  expires_at timestamptz
  rule_version text [not null]
  horizon_end date [not null]
  current_price numeric(28,8) [not null]
  buy_zone_low numeric(28,8) [not null]
  buy_zone_high numeric(28,8) [not null]
  invalidation numeric(28,8) [not null]
  target_weight_percent numeric(12,4) [not null]
  target_capital_usd numeric(28,2) [not null]
  tranche_percent numeric(12,4) [not null]
  tranche_usd numeric(28,2) [not null]
  suggested_whole_shares numeric(28,0) [not null]
  score numeric(7,2) [not null]
  reasons jsonb [not null]
  payload jsonb [not null]
  persisted_at timestamptz [not null, default: `now()`]

  indexes {
    (symbol, created_at) [name: "long_portfolio_alerts_symbol_created_idx"]
  }
}

Table market_bot.long_portfolio_states {
  rule_version text [not null]
  symbol text [not null]
  qualified_sessions jsonb [not null]
  last_emitted timestamptz
  updated_at timestamptz [not null]

  indexes {
    (rule_version, symbol) [pk]
    updated_at [name: "long_portfolio_states_updated_idx"]
  }
}

Table market_bot.market_bars {
  symbol text [not null]
  timeframe text [not null]
  timestamp timestamptz [not null]
  open numeric(28,8) [not null]
  high numeric(28,8) [not null]
  low numeric(28,8) [not null]
  close numeric(28,8) [not null]
  volume numeric(28,8) [not null]
  trade_count bigint
  vwap numeric(28,8)
  source text [not null]
  feed text [not null]
  is_final boolean [not null, default: true]
  downloaded_at timestamptz [not null, default: `now()`]

  indexes {
    (symbol, timeframe, timestamp) [pk]
    (symbol, timeframe, timestamp) [name: "market_bars_history_idx"]
  }
}

Table market_bot.patreon_caps_watches {
  id uuid [pk]
  symbol text [not null]
  rule_version text [not null]
  state text [not null]
  armed_at timestamptz [not null]
  updated_at timestamptz [not null]
  expires_at timestamptz [not null]
  zone_low numeric(28,8) [not null]
  zone_center numeric(28,8) [not null]
  zone_high numeric(28,8) [not null]
  invalidation numeric(28,8) [not null]
  highest_price numeric(28,8) [not null]
  tranche_stage integer [not null, default: 0]
  saw_macro_shock boolean [not null, default: false]
  support_sources jsonb [not null]
  source_analysis_ids jsonb [not null]
  payload jsonb [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (symbol, rule_version) [unique, name: "patreon_caps_one_active_per_symbol_version_idx", note: "Partial: state not in ('INVALIDATED', 'EXPIRED')"]
    (state, expires_at) [name: "patreon_caps_watches_state_expires_idx"]
  }
}

Table market_bot.patreon_caps_transitions {
  id uuid [pk]
  deduplication_key text [not null, unique]
  watch_id uuid [not null]
  symbol text [not null]
  previous_state text
  state text [not null]
  occurred_at timestamptz [not null]
  rule_version text [not null]
  current_price numeric(28,8) [not null]
  patreon_score numeric(7,2) [not null]
  tranche_stage integer
  suggested_tranche_usd numeric(28,2)
  suggested_whole_shares numeric(28,0)
  payload jsonb [not null]
  persisted_at timestamptz [not null, default: `now()`]

  indexes {
    (symbol, occurred_at) [name: "patreon_caps_transitions_symbol_occurred_idx"]
    (watch_id, occurred_at) [name: "patreon_caps_transitions_watch_occurred_idx"]
  }
}

Table market_bot.news_intelligence_results {
  provider text [not null]
  article_id bigint [not null]
  content_hash text [not null]
  article_updated_at timestamptz [not null]
  assessed_at timestamptz [not null]
  model text [not null]
  prompt_version text [not null]
  assessment jsonb [not null]
  analysis_results jsonb [not null]

  indexes {
    (provider, article_id) [pk]
    (article_updated_at, article_id) [name: "news_intelligence_results_updated_idx"]
  }
}

Ref: market_bot.run_strategies.run_id > market_bot.runs.id [delete: restrict]
Ref: market_bot.run_strategies.strategy_version_id > market_bot.strategy_versions.id [delete: restrict]
Ref: market_bot.processed_events.run_id > market_bot.runs.id [delete: restrict]
Ref: market_bot.control_events.run_id > market_bot.runs.id [delete: restrict]
Ref: market_bot.entry_watch_transitions.watch_id > market_bot.entry_watches.id [delete: restrict]
Ref: market_bot.entry_opportunities.original_watch_id > market_bot.entry_watches.id [delete: restrict]
Ref: market_bot.entry_opportunity_events.opportunity_id > market_bot.entry_opportunities.id [delete: restrict]
Ref: market_bot.patreon_caps_transitions.watch_id > market_bot.patreon_caps_watches.id [delete: restrict]

// entry_opportunities_levels_check: payload.trade_side defaults to LONG.
// LONG: invalidation < zone_low <= zone_high. SHORT: zone_low <= zone_high < invalidation.
